# sgl-kernel-npu

./: build.sh
csrc/: CMakeLists.txt  pytorch_extensions.cpp
csrc/deepep/: deep_ep.cpp  deep_ep.hpp  pybind_extension.cpp
csrc/deepep/ops/op_host/: cam_moe_combine_normal.cpp  cam_moe_combine_normal_tiling.cc  cam_moe_dispatch_normal.cpp  cam_moe_dispatch_normal_tiling.cc  dispatch_layout.cpp  dispatch_layout_tiling.cc  error_log.h  tiling_args.h
csrc/deepep/ops/op_host/op_api/: aclnn_cam_moe_combine_normal.cpp  aclnn_cam_moe_combine_normal.h  aclnn_cam_moe_dispatch_normal.cpp  aclnn_cam_moe_dispatch_normal.h  aclnn_dispatch_layout.cpp  aclnn_dispatch_layout.h
csrc/deepep/ops/op_kernel/: CMakeLists.txt  cam_moe_combine_normal.cpp  cam_moe_combine_normal.h  cam_moe_combine_normal_multi_round.h  cam_moe_dispatch_normal.cpp  cam_moe_dispatch_normal.h  dispatch_layout.cpp  dispatch_layout.h  dispatch_layout_a2.h  dispatch_layout_tiling.h  notify_dispatch.h
csrc/deepep/ops/utils/op_host/: error_log.h
csrc/deepep/ops2/op_host/: cam_moe_combine_normal.cpp  cam_moe_combine_normal_tiling.cc  error_log.h
csrc/deepep/ops2/op_host/op_api/: aclnn_cam_moe_combine_normal.cpp  aclnn_cam_moe_combine_normal.h
csrc/deepep/ops2/op_kernel/: cam_moe_combine_normal_tiling.h  dispatch_layout.h  dispatch_normal_a2.cpp  moe_distribute_combine_a2_layered.h  moe_distribute_combine_v2_layered_custom.h  moe_distribute_dispatch_v2_layered_custom.h  notify_dispatch_a2.cpp  notify_dispatch_a2.h
csrc/deepep/ops2/op_kernel/a2/: cam_moe_distribute_dispatch_a2_layered.h
csrc/lora/op_host/: bgmv_expand.cpp  bgmv_shrink.cpp  sgemmv_expand.cpp  sgemmv_shrink.cpp  sgmv_expand.cpp
csrc/lora/op_kernel/: sgemmv_expand_kernel.cpp  sgemmv_shrink_kernel.cpp
include/: sgl_kenel_npu_ops.h
python/deep_ep/: A2_DEEPEP_CN.md
python/deep_ep/deep_ep/: buffer.py
python/sgl_kernel_npu/sgl_kernel_npu/fla/: fused_gdn_gating.py  utils.py
python/sgl_kernel_npu/sgl_kernel_npu/norm/: split_qkv_rmsnorm_rope.py
tests/python/deepep/: parse_perf.sh  test_intranode.py
tests/python/sgl_kernel_npu/: test_add_rmsnorm_bias.py  test_lora_kernels.py  test_split_qkv_rmsnorm_rope.py
